[gd_scene load_steps=4 format=3 uid="uid://bl2qwbwhus33a"]

[ext_resource type="Script" path="res://src/components/2d/player/player.gd" id="1_u1mup"]
[ext_resource type="Texture2D" uid="uid://dgfeeu0ocb3fe" path="res://art/player.png" id="2_6spjx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sehb8"]
size = Vector2(78, 29)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 41
motion_mode = 1
script = ExtResource("1_u1mup")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_6spjx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 16.5)
shape = SubResource("RectangleShape2D_sehb8")

[node name="BulletSpawnPosition" type="Marker2D" parent="."]
position = Vector2(0, -30)

[node name="HitStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Player"

[node name="ShootStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Player"

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.8

[connection signal="timeout" from="ShootingTimer" to="." method="_on_shooting_timer_timeout"]
